# ouestcharlie-wally

./: README.md  pyproject.toml  wally_LLD.md
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: _build.yml  build.yml  publish.yml
src/wally/: __main__.py  agent.py  http_server.py  searcher.py
tests/: test_get_partition_summaries.py  test_get_root_manifest.py  test_gps_filter.py  test_http_server.py  test_search_validation.py  test_searcher.py  test_where_clause.py
