[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wally"
version = "0.1.0"
description = "OuEstCharlie Wally — photo search/consumption agent"
requires-python = ">=3.11"
dependencies = [
    "ouestcharlie-toolkit",
]

[project.scripts]
wally = "wally.__main__:main"

[tool.uv.sources]
ouestcharlie-toolkit = { path = "../ouestcharlie-py-toolkit", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/wally"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mcp[cli]>=1.26.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
