[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouestcharlie-wally"
version = "0.6.0"
description = "OuEstCharlie Wally — photo search/consumption agent"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Antoine Hue" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.27",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "ouestcharlie-py-toolkit>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ouestcharlie/ouestcharlie-wally"
Issues = "https://github.com/ouestcharlie/ouestcharlie-wally/issues"

[project.scripts]
wally = "wally.__main__:main"

[tool.uv.sources]
ouestcharlie-py-toolkit = { path = "../ouestcharlie-py-toolkit", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/wally"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
tmp_path_retention_policy = "none"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/wally/__main__.py" = ["E402"]  # logging must be configured before wally modules are imported

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mcp[cli]>=1.27",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
